# firewalld-manager

./: README.md  pyproject.toml
.claude/: settings.local.json
firewalld_manager/: __init__.py  cli.py  firewall.py  risk.py
firewalld_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
firewalld_manager/tui/: __init__.py  app.py  dialogs.py  port_list.py
